--- a/file.html
+++ b/file.html
@@ -6,14 +6,14 @@
    <body>
     
     <h1>This is my test Javascript Assignment</h1>
-    <h1>...It's not very impressive, sorry... </h1>
+    <h1>It's not very impressive, but I focused more on the functionality, rather than the aesthetics... sorry... </h1>
     
   
   </body>
   
       <style>
             body {
-              background-color:green;
+              background-color:blue;
               color:#fff;
               text-align:center;
             }
