--- a/file.html
+++ b/file.html
@@ -1,6 +1,10 @@
 
-<html>
- 
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>Chart.js demo</title>
+        <script src='Chart.min.js'></script>
+    </head>
   <title>Test website</title>
   
    <body>
@@ -18,5 +22,8 @@
               text-align:center;
             }
       </style>
-  
+
+
+    <body>
+    </body>
 </html>
